--- a/blog/app/views/articles/_form.html.erb
+++ b/blog/app/views/articles/_form.html.erb
@@ -1,8 +1,6 @@
-<h1>New Article</h1>
-
-<%= form_for :article, url: articles_path do |f| %>
-
- <% if @article.errors.any? %>
+<%= form_for @article do |f| %>
+ 
+  <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2>
         <%= pluralize(@article.errors.count, "error") %> prohibited
@@ -15,7 +13,7 @@
       </ul>
     </div>
   <% end %>
-
+ 
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
@@ -29,5 +27,5 @@
   <p>
     <%= f.submit %>
   </p>
+ 
 <% end %>
-<%= link_to 'Back', articles_path %>
